Bug 42361 - [SNB] Xorg dies when starting Eclipse using latest xf86-video-intel git on SNB hardware with SNA enabled
Summary: [SNB] Xorg dies when starting Eclipse using latest xf86-video-intel git on SN...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-29 02:18 UTC by nkalkhof
Modified: 2011-10-29 03:34 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
dmesg (40.21 KB, text/plain)
2011-10-29 02:18 UTC, nkalkhof
no flags Details

Description nkalkhof 2011-10-29 02:18:35 UTC
Created attachment 52880 [details]
dmesg

Hello,

Xorg dies every thime when starting Eclipse using latest xf86-video-intel git ( Oct. 28th) on SNB hardware with SNA enabled Git versions before oct 24th do fine. Xorg stacktrace and dmesg attached.
Could anyone confirm the issue, please?

Regards,
Nic

Xorg backtrace:
[mi] EQ overflowing. The server is probably stuck in an infinite loop.
[   213.106] 
Backtrace:
[   213.107] 0: /usr/bin/X (xorg_backtrace+0x28) [0x54e070]
[   213.107] 1: /usr/bin/X (mieqEnqueue+0x148) [0x530f17]
[   213.107] 2: /usr/bin/X (0x400000+0x452ce) [0x4452ce]
[   213.107] 3: /usr/bin/X (xf86PostMotionEventP+0x31) [0x47abc1]
[   213.107] 4: /usr/lib64/xorg/modules/input/evdev_drv.so (0x7f1363bae000+0x49f2) [0x7f1363bb29f2]
[   213.107] 5: /usr/bin/X (0x400000+0x682e0) [0x4682e0]
[   213.107] 6: /usr/bin/X (0x400000+0x89fce) [0x489fce]
[   213.107] 7: /lib/libpthread.so.0 (0x7f1368402000+0xeaa0) [0x7f1368410aa0]
[   213.107] 8: /usr/lib64/xorg/modules/drivers/intel_drv.so (0x7f13654e3000+0x4482c) [0x7f136552782c]
[   213.107] 9: /usr/lib64/xorg/modules/drivers/intel_drv.so (0x7f13654e3000+0x4b2a4) [0x7f136552e2a4]
[   213.107] 10: /usr/bin/X (miFillGeneralPoly+0x4aa) [0x53c1ca]
[   213.107] 11: /usr/bin/X (0x400000+0xe60cc) [0x4e60cc]
[   213.107] 12: /usr/bin/X (0x400000+0x30a09) [0x430a09]
[   213.107] 13: /usr/bin/X (0x400000+0x33c6e) [0x433c6e]
[   213.107] 14: /usr/bin/X (0x400000+0x247ed) [0x4247ed]
[   213.107] 15: /lib/libc.so.6 (__libc_start_main+0xec) [0x7f136734be60]
[   213.107] 16: /usr/bin/X (0x400000+0x243b9) [0x4243b9]
Comment 1 Chris Wilson 2011-10-29 02:34:57 UTC
commit 719626ef7918d5cd69d13f983b8b615aefe215d6
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat Oct 29 10:26:08 2011 +0100

    sna: Increment clip box when short-circuiting the iteration
    
    Reported-by: nkalkhof@web.de
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 2 nkalkhof 2011-10-29 02:46:48 UTC
Hi Chris,
thanks for the quick response. X now dies immediately after eclipse is up and not while starting eclipse, resulting in a black screen. No stacktrace in xorg.log or dmesg :(

Anything alse I can provide to help?

Regards
Nic
Comment 3 Chris Wilson 2011-10-29 02:50:42 UTC
At that point, gdb. I would recompile first just to make sure it is not anything stupid...
Comment 4 Chris Wilson 2011-10-29 03:06:27 UTC
Played some more with eclipse and hit another:

commit 64a57c8dbec81f6420ff032985237eb16cebfb87
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat Oct 29 11:01:51 2011 +0100

    sna: Further clipping bugs
    
    Make sure the line is clipped to the current clip box and discard if the
    clip is reduced to nothing.
    
    References: https://bugs.freedesktop.org/show_bug.cgi?id=42361
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

Isn't it fun how much unaccelerated code eclipse was hitting... Good for debuggging the new acceleration routines ;-)
Comment 5 nkalkhof 2011-10-29 03:22:08 UTC
Hi Chris,

Ok I'll give it a try. In the meantime here is the gdb trace after a clean rebuild. Hops this helps.

Nic

Program received signal SIGSEGV, Segmentation fault.
0x00007fd41b09b240 in sna_poly_zero_line_blt () from /usr/lib64/xorg/modules/drivers/intel_drv.so
(gdb) backtrace full
#0  0x00007fd41b09b240 in sna_poly_zero_line_blt () from /usr/lib64/xorg/modules/drivers/intel_drv.so
No symbol table info available.
#1  0x00007fd41b0a27c1 in sna_poly_line () from /usr/lib64/xorg/modules/drivers/intel_drv.so
No symbol table info available.
#2  0x00000000004e6f80 in damagePolylines ()
No symbol table info available.
#3  0x0000000000430684 in ProcPolyLine ()
No symbol table info available.
#4  0x0000000000433c6e in Dispatch ()
No symbol table info available.
#5  0x00000000004247ed in main ()
No symbol table info available.
Comment 6 Chris Wilson 2011-10-29 03:25:59 UTC
Ok, that looks like the second bug I hit only I was fortunate for it not to die in a ball of fire.
Comment 7 nkalkhof 2011-10-29 03:29:33 UTC
Hi Chris,

ok, your commit 64a57c8dbec81f6420ff032985237eb16cebfb87 already fixes the X segfault! :-)

Nic
Comment 8 Chris Wilson 2011-10-29 03:31:12 UTC
You know where to find me for any further issues. :)
Comment 9 nkalkhof 2011-10-29 03:34:34 UTC
Hey Chris,

of course :) glad I could help. 

Nic


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.