sna: Further clipping bugs

Make sure the line is clipped to the current clip box and discard if the
clip is reduced to nothing.

References: https://bugs.freedesktop.org/show_bug.cgi?id=42361
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>